{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "ca1aa8c8-2a25-456d-82d1-c7aef4d60899",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "4657c9f0-020d-4f00-8cea-252e97b36666",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b57d5f4-cb26-41b3-9dac-75b2be82bdf1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GodSelection",
            "id": "ff4b3db5-0ce3-411b-b2c0-ca7552ae84c3",
            "actions": [
                {
                    "name": "CycleThroughGods",
                    "type": "Button",
                    "id": "c8ac0f64-bf9d-408c-bc39-dc2de775c593",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b41a8fc-81fb-45b4-8c7a-8fdf2df1ba25",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleThroughGods",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}